system/control-plane/global/k8s-artifacts/vick-apim-pub-store.yaml

#Create pub-store deployment and the service
#https://github.com/wso2/kubernetes-apim/blob/master/pattern-1/apim/wso2apim-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pub-store
  namespace: cellery-system
spec:
  selector:
    matchLabels:
      deployment: pub-store
  replicas: 1
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: pub-store
    spec:
      containers:
      - name: pub-store
        image: wso2vick/wso2am:latest
        livenessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - nc -z localhost 9443
          initialDelaySeconds: 150
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - /bin/bash
              - -c
              - nc -z localhost 9443
          initialDelaySeconds: 150
          periodSeconds: 10
        imagePullPolicy: Always
        ports:
        -
          containerPort: 8280
          protocol: "TCP"
        -
          containerPort: 8243
          protocol: "TCP"
        -
          containerPort: 9763
          protocol: "TCP"
        -
          containerPort: 9443
          protocol: "TCP"
        -
          containerPort: 5672
          protocol: "TCP"
        -
          containerPort: 9711
          protocol: "TCP"
        -
          containerPort: 9611
          protocol: "TCP"
        -
          containerPort: 7711
          protocol: "TCP"
        -
          containerPort: 7611
          protocol: "TCP"
        volumeMounts:
        - name: apim-storage-volume
          mountPath: /home/wso2carbon/wso2am-2.6.0/repository/deployment/server
        - name: apim-conf
          mountPath: /home/wso2carbon/wso2-config-volume/repository/conf
        - name: apim-conf-datasources
          mountPath: /home/wso2carbon/wso2-config-volume/repository/conf/datasources
        - name: conf-identity
          mountPath: /home/wso2carbon/wso2-config-volume/repository/conf/identity
        - name: apim-template
          mountPath: /home/wso2carbon/wso2-config-volume/repository/resources/api_templates
        #        - name: auth-ext
        #          mountPath: /home/wso2carbon/wso2-artifact-volume/repository/components/lib
      serviceAccountName: "vicksvc-account"
      imagePullSecrets:
      - name: wso2creds
      volumes:
      - name: apim-storage-volume
        persistentVolumeClaim:
          claimName: wso2apim-local-pvc
      - name: apim-conf
        configMap:
          name: apim-conf
      - name: apim-conf-datasources
        configMap:
          name: apim-conf-datasources
      - name: conf-identity
        configMap:
          name: conf-identity
      - name: apim-template
        configMap:
          name: apim-template
#      - name: auth-ext
#        configMap:
#          name: auth-ext
---
#https://github.com/wso2/kubernetes-apim/blob/master/pattern-1/apim/wso2apim-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pub-store
  labels:
    app: pub-store
  namespace: cellery-system
spec:
  # label keys and values that must match in order to receive traffic for this service
  selector:
    deployment: pub-store
  ports:
    # ports that this service should serve on
    -
      name: pass-through-http
      protocol: TCP
      port: 8280
    -
      name: pass-through-https
      protocol: TCP
      port: 8243
    -
      name: servlet-http
      protocol: TCP
      port: 9763
    -
      name: servlet-https
      protocol: TCP
      port: 9443
---
