system/control-plane/global/k8s-artifacts/vick-sp-worker-service.yaml
# Copyright (c) 2018, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: wso2sp-worker
  namespace: cellery-system
  labels:
    app: wso2sp-worker
    node: wso2sp-worker
    pattern: wso2sp-pattern-distributed
spec:
  ports:
    # ports that this service should serve on
    -
      port: 9091
      name: http2
      protocol: TCP
    -
      port: 9092
      name: http
      protocol: TCP
    -
      port: 9411
      name: zipkin
      protocol: TCP
    -
      port: 9443
      name: https-mcgw-upload
      protocol: TCP
    -
      port: 9090
      name: http-mcgw-upload
      protocol: TCP
    -
      port: 7611
      name: tcp-thrift
      protocol: TCP
    -
      port: 7711
      name: tcp-ssl-thrift
      protocol: TCP
    -
      port: 9611
      name: tcp-binary
      protocol: TCP
    -
      port: 9711
      name: tcp-ssl-binary
      protocol: TCP
    -
      port: 7443
      name: http-global-gw
      protocol: TCP
    -
      port: 9123
      name: http-observability-api
      protocol: TCP

  # label keys and values that must match in order to receive traffic for this service
  selector:
    app: wso2sp-worker
    node: wso2sp-worker
    pattern: wso2sp-pattern-distributed
